2007-01-25  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb:
	- Added OSA -> Ruby 'TIFF' conversion ;
	- Fixed the Ruby -> OSA 'list_of_*' conversion.

	* tests/tc_itunes.rb,
	  tests/tc_ichat.rb,
	  tests/as.rb:
	Added some new tests to check RubyOSA with iTunes and iChat.
	Uses NSAppleScript through RubyCocoa to verify what has been done.

	* AUTHORS:
	Added Michail.

2007-01-25  Michail Pishchagin  <mblsha@gmail.com>

	* src/lib/rbosa.rb:
	Make sure '$' and '=' are escaped.

2007-01-21  Mike Naberezny <mike@maintainable.com>

	* sample/:
	Sorted samples into subdirectories by application.

2007-01-17  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/rbosa.c:
	Fixed 64-bit build.

2007-01-11  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb:
	Make sure the converted 'alis' paths are unescaped. Thanks James MacAulay. 

2007-01-07  Laurent Sansonetti  <lsansonetti@apple.com>

	* sample/AddressBook_inspect.rb:
	Modified to handle application-level errors that Address Book could
	raise when trying to format malformed addresses.

	* src/rbosa.c:
	Fixed handling of application-level errors.

	* tests/testall.rb,
	  src/lib/rbosa.rb,
	  src/rbosa.c,
	  src/rbosa_sdef.c,
	  src/rbosa.h,
	  src/rbosa_conv.c,
	  COPYRIGHT,
	  extconf.rb,
	  bin/rdoc-osa:
	Updated copyright date to 2007.

	* AUTHORS:
	Added Stefan.

2007-01-07  Stefan Saasen  <s@juretta.com>

	* sample/AddressBook_inspect.rb:
	New sample code, that prints all contacts in the Address Book.  

=== RubyOSA 0.2.0 ===

2007-02-01  Laurent Sansonetti  <lsansonetti@apple.com>

	* rubyosa.gemspec:
	Updated for 0.2.0.

2006-12-29  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb,
	  src/rbosa.c:
	- Made the UTF8 strings optional and disabled by default ;
	- Fixed the TIFF conversion to OSA ;
	- Handle application errors and convert them as Ruby exceptions.

	* sample/iTunes_control.rb,
	  sample/iTunes_inspect.rb:
	Activate UTF8 strings.
